--- a/company.html
+++ b/company.html
@@ -18,13 +18,13 @@
         <div class="max-w-7xl mx-auto flex flex-col items-center justify-between px-4 py-4">
             <div class="flex flex-row items-center w-full justify-between">
                 <!-- Logo and company link -->
-                <a href="#" class="flex items-center space-x-4">
-                    <img src="./assets/img/logo.png" alt="Referral Recruiting" class="h-13">
+                <a href="./index.html" class="flex items-center space-x-4">
+                    <img src="./assets/img/logo.png" alt="リファラルリクルーティング ロゴ" class="h-13">
                 </a>
 
                 <!-- Right section - buttons -->
                 <div class="hidden md:flex space-x-3">
-                    <a href="#" class="text-sm hover:underline flex whitespace-nowrap text-[#F8F3E6]">
+                    <a href="#" class="text-sm hover:underline flex whitespace-nowrap text-[#F8F3E6]" target="_blank">
                         白潟総合研究所株式会社のサイトはこちら &nbsp;
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" id="expand" class="scale-80">
                             <path fill="none" d="M0 0h24v24H0Z"></path>
@@ -48,11 +48,11 @@
             <!-- Navigation -->
             <div class="flex flex-row items-center justify-end w-full mt-4 gap-4">
                 <nav class="flex items-center space-x-6 text-sm">
-                    <a href="#" class="hover:underline font-medium">TOP</a>
-                    <a href="#" class="hover:underline">事例紹介</a>
-                    <a href="#" class="hover:underline">サービス紹介</a>
-                    <a href="#" class="hover:underline">セミナー</a>
-                    <a href="#" class="hover:underline">会社概要</a>
+                    <a href="./index.html" class="hover:underline font-medium">TOP</a>
+                    <a href="./case.html" class="hover:underline">事例紹介</a>
+                    <a href="./service.html" class="hover:underline">サービス紹介</a>
+                    <a href="./index.html#semina" class="hover:underline">セミナー</a>
+                    <a href="./company.html" class="hover:underline">会社概要</a>
                 </nav>
                 <div class="flex gap-4 text-center">
                     <div class="w-44 px-4 py-2 text-sm bg-white hover:bg-[#E57D22] text-black hover:text-white">
@@ -72,11 +72,11 @@
         <!-- Mobile Menu Header -->
         <div class="flex justify-between items-center px-4 py-4 border-b border-gray-600">
             <a href="#" class="flex items-center space-x-4">
-                <img src="./assets/img/logo.png" alt="Referral Recruiting" class="h-10">
+                <img src="./assets/img/logo.png" alt="リファラルリクルーティング ロゴ" class="h-10">
             </a>
             <button id="close-menu-btn" class="flex flex-col items-center space-y-1">
-                <svg id="close-icon" class="w-6 h-6 text-gray-800 hidden" fill="none" stroke="white" stroke-width="2"
-                    viewBox="0 0 24 24">
+                <svg id="close-icon" class="w-6 h-6 text-gray-800 hidden" fill="none" stroke="white"
+                    stroke-width="2" viewBox="0 0 24 24">
                     <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12" />
                 </svg>
                 <span class="text-xs text-white mt-4">CLOSE</span>
@@ -88,19 +88,19 @@
             <nav class="px-10 py-6">
                 <ul class="space-y-0">
                     <li class="border-b border-gray-200">
-                        <a href="#" class="block py-4 text-lg font-medium hover:text-orange-500">TOP</a>
+                        <a href="./index.html" class="block py-4 text-lg font-medium hover:text-orange-500">TOP</a>
                     </li>
                     <li class="border-b border-gray-200">
-                        <a href="#" class="block py-4 text-lg font-medium hover:text-orange-500">事例紹介</a>
+                        <a href="./case.html" class="block py-4 text-lg font-medium hover:text-orange-500">事例紹介</a>
                     </li>
                     <li class="border-b border-gray-200">
-                        <a href="#" class="block py-4 text-lg font-medium hover:text-orange-500">サービス紹介</a>
+                        <a href="./service.html" class="block py-4 text-lg font-medium hover:text-orange-500">サービス紹介</a>
                     </li>
                     <li class="border-b border-gray-200">
-                        <a href="#" class="block py-4 text-lg font-medium hover:text-orange-500">セミナー</a>
+                        <a href="./index.html#semina" class="block py-4 text-lg font-medium hover:text-orange-500">セミナー</a>
                     </li>
                     <li class="border-b border-gray-200">
-                        <a href="#" class="block py-4 text-lg font-medium hover:text-orange-500">会社概要</a>
+                        <a href="./company.html" class="block py-4 text-lg font-medium hover:text-orange-500">会社概要</a>
                     </li>
                 </ul>
             </nav>
@@ -115,12 +115,6 @@
                     class="w-full py-4 border border-gray-300 text-lg font-black hover:bg-[#E57D22] text-black hover:text-white cursor-pointer">
                     <a href="#" class="text-[#5a2f12]">資料請求</a>
                 </div>
-                <!-- <button class="w-full py-4 border border-gray-300 text-lg font-medium hover:bg-gray-50 transition-colors">
-                    セミナーのお申し込み
-                </button>
-                <button class="w-full py-4 border border-gray-300 text-lg font-medium hover:bg-gray-50 transition-colors">
-                    資料請求
-                </button> -->
             </div>
         </div>
     </div>
@@ -161,7 +155,7 @@
             <div class="relative grid my-4 md:my-10 md:grid-cols-2 max-w-4xl mx-auto gap-4">
                 <!-- Right Column: Image -->
                 <div class="flex justify-center md:justify-end items-start block md:hidden">
-                    <img src="./assets/img/ceo.png" alt="社長写真" class="max-w-xs w-full object-contain">
+                    <img src="./assets/img/ceo.png" alt="白潟敏朗社長の写真（モバイル表示用）" class="max-w-xs w-full object-contain">
                 </div>
 
                 <!-- Left Column: Text -->
@@ -179,7 +173,7 @@
 
                 <!-- Right Column: Image -->
                 <div class="flex justify-center md:justify-end items-start hidden md:block">
-                    <img src="./assets/img/ceo.png" alt="社長写真" class="max-w-xs w-full object-contain">
+                    <img src="./assets/img/ceo.png" alt="白潟敏朗社長の写真（デスクトップ表示用）" class="max-w-xs w-full object-contain">
                 </div>
 
             </div>
@@ -334,7 +328,7 @@
 
                     <!-- Card -->
                     <div class="bg-white shadow overflow-hidden">
-                        <img src="./assets/img/semina.png" alt="セミナー画像" class="w-full h-48 object-cover">
+                        <img src="./assets/img/semina.png" alt="リファラルリクルーティングセミナー1の画像" class="w-full h-48 object-cover">
                         <div class="p-5">
                             <div class="flex space-x-3 text-sm mb-3">
                                 <span class="border border-orange-500 text-orange-500 px-2 py-0.5 rounded">カテゴリー</span>
@@ -352,7 +346,7 @@
 
                     <!-- Duplicate the card for demo -->
                     <div class="bg-white shadow overflow-hidden">
-                        <img src="./assets/img/semina.png" alt="セミナー画像" class="w-full h-48 object-cover">
+                        <img src="./assets/img/semina.png" alt="リファラルリクルーティングセミナー2の画像" class="w-full h-48 object-cover">
                         <div class="p-5">
                             <div class="flex space-x-3 text-sm mb-3">
                                 <span class="border border-orange-500 text-orange-500 px-2 py-0.5 rounded">カテゴリー</span>
@@ -369,7 +363,7 @@
                     </div>
 
                     <div class="bg-white shadow overflow-hidden">
-                        <img src="./assets/img/semina.png" alt="セミナー画像" class="w-full h-48 object-cover">
+                        <img src="./assets/img/semina.png" alt="リファラルリクルーティングセミナー3の画像" class="w-full h-48 object-cover">
                         <div class="p-5">
                             <div class="flex space-x-3 text-sm mb-3">
                                 <span class="border border-orange-500 text-orange-500 px-2 py-0.5 rounded">カテゴリー</span>
@@ -386,7 +380,7 @@
                     </div>
 
                     <div class="bg-white shadow overflow-hidden">
-                        <img src="./assets/img/semina.png" alt="セミナー画像" class="w-full h-48 object-cover">
+                        <img src="./assets/img/semina.png" alt="リファラルリクルーティングセミナー4の画像" class="w-full h-48 object-cover">
                         <div class="p-5">
                             <div class="flex space-x-3 text-sm mb-3">
                                 <span class="border border-orange-500 text-orange-500 px-2 py-0.5 rounded">カテゴリー</span>
@@ -403,7 +397,7 @@
                     </div>
 
                     <div class="bg-white shadow overflow-hidden">
-                        <img src="./assets/img/semina.png" alt="セミナー画像" class="w-full h-48 object-cover">
+                        <img src="./assets/img/semina.png" alt="リファラルリクルーティングセミナー5の画像" class="w-full h-48 object-cover">
                         <div class="p-5">
                             <div class="flex space-x-3 text-sm mb-3">
                                 <span class="border border-orange-500 text-orange-500 px-2 py-0.5 rounded">カテゴリー</span>
@@ -423,15 +417,15 @@
             </div>
         </section>
 
-        <section class="relative bg-gray-100">
+        <section class="relative bg-gray-100 h-[400px]">
             <!-- Background Image -->
             <div class="absolute inset-0">
-                <img src="./assets/img/fv1.png" alt="Background" class="w-full h-full object-cover">
+                <img src="./assets/img/fv1.png" alt="小冊子紹介セクションの背景画像" class="w-full h-full object-cover">
                 <div class="absolute inset-0 bg-white bg-opacity-70"></div>
             </div>
 
             <!-- Content -->
-            <div class="relative max-w-4xl mx-auto px-4 py-12 text-center">
+            <div class="relative max-w-4xl mx-auto px-4 py-12 text-center top-[50px]">
                 <p class="text-gray-600 font-bold text-md md:text-xl mb-2">＼ほぼノーコストで／</p>
                 <h2 class="text-xl md:text-2xl font-bold !leading-9 mb-4">
                     <span class="text-orange-500 font-semibold">会社の理念に共鳴する社員</span>
@@ -514,15 +508,15 @@
                     class="relative z-10 w-full max-w-7xl px-6 py-10 flex flex-col sm:flex-row sm:items-center sm:justify-between">
                     <!-- Left logo -->
                     <div class="flex items-center gap-2">
-                        <img src="./assets/img/logo.png" alt="Logo" class="h-16">
+                        <img src="./assets/img/logo.png" alt="リファラルリクルーティング ロゴ" class="h-16">
                     </div>
                     <!-- Menu -->
                     <nav class="mt-6 sm:mt-0 flex flex-wrap gap-6 text-sm">
-                        <a href="#" class="hover:text-orange-400">TOP</a>
-                        <a href="#" class="hover:text-orange-400">事例紹介</a>
-                        <a href="#" class="hover:text-orange-400">サービス紹介</a>
-                        <a href="#semina" class="hover:text-orange-400">セミナー</a>
-                        <a href="#" class="hover:text-orange-400">会社概要</a>
+                        <a href="./index.html" class="hover:text-orange-400">TOP</a>
+                        <a href="./case.html" class="hover:text-orange-400">事例紹介</a>
+                        <a href="./service.html" class="hover:text-orange-400">サービス紹介</a>
+                        <a href="./index.html#semina" class="hover:text-orange-400">セミナー</a>
+                        <a href="./company.html" class="hover:text-orange-400">会社概要</a>
                     </nav>
                 </div>
                 <!-- Bottom footer -->
@@ -538,14 +532,14 @@
         <div class="md:hidden bg-[#4A4A4A] text-white px-6 py-8">
             <!-- Logo and Company Name -->
             <div class="flex items-center gap-3 mb-8">
-                <img src="./assets/img/logo.png" alt="Logo" class="h-16">
+                <img src="./assets/img/logo.png" alt="リファラルリクルーティング ロゴ" class="h-16">
             </div>
 
             <!-- Menu Items -->
             <nav class="mb-8">
                 <ul class="space-y-0">
                     <li class="border-b border-white border-opacity-20">
-                        <a href="#" class="flex items-center justify-between py-4 text-white hover:text-orange-400">
+                        <a href="./index.html" class="flex items-center justify-between py-4 text-white hover:text-orange-400">
                             <span>TOP</span>
                             <svg class="w-3 h-3 text-black" fill="white" viewBox="0 0 24 24">
                                 <path d="M8 5v14l11-7z" />
@@ -553,7 +547,7 @@
                         </a>
                     </li>
                     <li class="border-b border-white border-opacity-20">
-                        <a href="#" class="flex items-center justify-between py-4 text-white hover:text-orange-400">
+                        <a href="./service.html" class="flex items-center justify-between py-4 text-white hover:text-orange-400">
                             <span>サービス紹介</span>
                             <svg class="w-3 h-3 text-black" fill="white" viewBox="0 0 24 24">
                                 <path d="M8 5v14l11-7z" />
@@ -561,7 +555,7 @@
                         </a>
                     </li>
                     <li class="border-b border-white border-opacity-20">
-                        <a href="#" class="flex items-center justify-between py-4 text-white hover:text-orange-400">
+                        <a href="./case.html" class="flex items-center justify-between py-4 text-white hover:text-orange-400">
                             <span>事例紹介</span>
                             <svg class="w-3 h-3 text-black" fill="white" viewBox="0 0 24 24">
                                 <path d="M8 5v14l11-7z" />
@@ -569,7 +563,7 @@
                         </a>
                     </li>
                     <li class="border-b border-white border-opacity-20">
-                        <a href="#" class="flex items-center justify-between py-4 text-white hover:text-orange-400">
+                        <a href="./index.html#semina" class="flex items-center justify-between py-4 text-white hover:text-orange-400">
                             <span>セミナー</span>
                             <svg class="w-3 h-3 text-black" fill="white" viewBox="0 0 24 24">
                                 <path d="M8 5v14l11-7z" />
@@ -577,7 +571,7 @@
                         </a>
                     </li>
                     <li class="border-b border-white border-opacity-20">
-                        <a href="#" class="flex items-center justify-between py-4 text-white hover:text-orange-400">
+                        <a href="./company.html" class="flex items-center justify-between py-4 text-white hover:text-orange-400">
                             <span>会社概要</span>
                             <svg class="w-3 h-3 text-black" fill="white" viewBox="0 0 24 24">
                                 <path d="M8 5v14l11-7z" />
