--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
         <div class="max-w-7xl mx-auto flex flex-col items-center justify-between px-4 py-4">
             <div class="flex flex-row items-center w-full justify-between">
                 <!-- Logo and company link -->
-                <a href="#" class="flex items-center space-x-4">
-                    <img src="./assets/img/logo.png" alt="Referral Recruiting" class="h-13">
+                <a href="./index.html" class="flex items-center space-x-4">
+                    <img src="./assets/img/logo.png" alt="リファラルリクルーティング" class="h-13">
                 </a>
 
                 <!-- Right section - buttons -->
                 <div class="hidden md:flex space-x-3">
-                    <a href="#" class="text-sm hover:underline flex whitespace-nowrap text-[#F8F3E6]">
+                    <a href="#" class="text-sm hover:underline flex whitespace-nowrap text-[#F8F3E6]" target="_blank">
                         白潟総合研究所株式会社のサイトはこちら &nbsp;
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" id="expand" class="scale-80">
                             <path fill="none" d="M0 0h24v24H0Z"></path>
@@ -48,11 +48,11 @@
             <!-- Navigation -->
             <div class="flex flex-row items-center justify-end w-full mt-4 gap-4">
                 <nav class="flex items-center space-x-6 text-sm">
-                    <a href="#" class="hover:underline font-medium">TOP</a>
-                    <a href="#" class="hover:underline">事例紹介</a>
-                    <a href="#" class="hover:underline">サービス紹介</a>
-                    <a href="#" class="hover:underline">セミナー</a>
-                    <a href="#" class="hover:underline">会社概要</a>
+                    <a href="./index.html" class="hover:underline font-medium">TOP</a>
+                    <a href="./case.html" class="hover:underline">事例紹介</a>
+                    <a href="./service.html" class="hover:underline">サービス紹介</a>
+                    <a href="./index.html#semina" class="hover:underline">セミナー</a>
+                    <a href="./company.html" class="hover:underline">会社概要</a>
                 </nav>
                 <div class="flex gap-4 text-center">
                     <div class="w-44 px-4 py-2 text-sm bg-white hover:bg-[#E57D22] text-black hover:text-white">
@@ -72,7 +72,7 @@
         <!-- Mobile Menu Header -->
         <div class="flex justify-between items-center px-4 py-4 border-b border-gray-600">
             <a href="#" class="flex items-center space-x-4">
-                <img src="./assets/img/logo.png" alt="Referral Recruiting" class="h-10">
+                                    <img src="./assets/img/logo.png" alt="リファラルリクルーティング" class="h-10">
             </a>
             <button id="close-menu-btn" class="flex flex-col items-center space-y-1">
                 <svg id="close-icon" class="w-6 h-6 text-gray-800 hidden" fill="none" stroke="white"
@@ -88,19 +88,19 @@
             <nav class="px-10 py-6">
                 <ul class="space-y-0">
                     <li class="border-b border-gray-200">
-                        <a href="#" class="block py-4 text-lg font-medium hover:text-orange-500">TOP</a>
+                        <a href="./index.html" class="block py-4 text-lg font-medium hover:text-orange-500">TOP</a>
                     </li>
                     <li class="border-b border-gray-200">
-                        <a href="#" class="block py-4 text-lg font-medium hover:text-orange-500">事例紹介</a>
+                        <a href="./case.html" class="block py-4 text-lg font-medium hover:text-orange-500">事例紹介</a>
                     </li>
                     <li class="border-b border-gray-200">
-                        <a href="#" class="block py-4 text-lg font-medium hover:text-orange-500">サービス紹介</a>
+                        <a href="./service.html" class="block py-4 text-lg font-medium hover:text-orange-500">サービス紹介</a>
                     </li>
                     <li class="border-b border-gray-200">
-                        <a href="#" class="block py-4 text-lg font-medium hover:text-orange-500">セミナー</a>
+                        <a href="./index.html#semina" class="block py-4 text-lg font-medium hover:text-orange-500">セミナー</a>
                     </li>
                     <li class="border-b border-gray-200">
-                        <a href="#" class="block py-4 text-lg font-medium hover:text-orange-500">会社概要</a>
+                        <a href="./company.html" class="block py-4 text-lg font-medium hover:text-orange-500">会社概要</a>
                     </li>
                 </ul>
             </nav>
@@ -172,10 +172,10 @@
 
                 <div class="wrapper">
                     <div class="carousel">
-                        <div><img src="./assets/img/slide1.png"></div>
-                        <div><img src="./assets/img/slide2.png"></div>
-                        <div><img src="./assets/img/slide3.png"></div>
-                        <div><img src="./assets/img/slide4.png"></div>
+                        <div><img src="./assets/img/slide1.png" alt="リファラルリクルーティング事例1"></div>
+                        <div><img src="./assets/img/slide2.png" alt="リファラルリクルーティング事例2"></div>
+                        <div><img src="./assets/img/slide3.png" alt="リファラルリクルーティング事例3"></div>
+                        <div><img src="./assets/img/slide4.png" alt="リファラルリクルーティング事例4"></div>
                     </div>
                 </div>
 
@@ -236,7 +236,7 @@
                     </div>
                     <!-- Image -->
                     <div>
-                        <img src="./assets/img/about1.png" alt="Team discussion" class=" w-full object-cover">
+                        <img src="./assets/img/about1.png" alt="チームディスカッション" class=" w-full object-cover">
                     </div>
                 </div>
             </div>
@@ -251,7 +251,7 @@
                     </div>
                     <!-- Image -->
                     <div class="hidden md:block">
-                        <img src="./assets/img/about2.png" alt="Team discussion" class=" w-full object-cover">
+                        <img src="./assets/img/about2.png" alt="チームディスカッション" class=" w-full object-cover">
                     </div>
                     <div>
                         <h3 class="text-xl md:text-2xl font-bold mt-4">採用コストを削減</h3>
@@ -260,7 +260,7 @@
                         </p>
                     </div>
                     <div class="md:hidden flex justify-center">
-                        <img src="./assets/img/about2.png" alt="Team discussion" class=" w-full object-cover">
+                        <img src="./assets/img/about2.png" alt="チームディスカッション" class=" w-full object-cover">
                     </div>
 
                 </div>
@@ -282,7 +282,7 @@
                     </div>
                     <!-- Image -->
                     <div>
-                        <img src="./assets/img/about3.png" alt="Team discussion" class=" w-full object-cover">
+                        <img src="./assets/img/about3.png" alt="チームディスカッション" class=" w-full object-cover">
                     </div>
                 </div>
             </div>
@@ -315,7 +315,7 @@
 
                 <!-- Left image -->
                 <div class="hidden md:block">
-                    <img src="./assets/img/concept.png" alt="Concept visual" class="w-full object-cover">
+                    <img src="./assets/img/concept.png" alt="コンセプトビジュアル" class="w-full object-cover">
                 </div>
 
                 <!-- Right text -->
@@ -335,7 +335,7 @@
                 よろしくお願いいたします。
                 <!-- right image -->
                 <div class="block md:hidden">
-                    <img src="./assets/img/concept.png" alt="Concept visual" class="w-full object-cover">
+                    <img src="./assets/img/concept.png" alt="コンセプトビジュアル" class="w-full object-cover">
                 </div>
 
             </div>
@@ -409,7 +409,7 @@
             </div>
 
             <div class="flex justify-center mt-8">
-                <a href="#"
+                <a href="./company.html#seminar"
                     class="inline-flex justify-between items-center px-8 py-4 text-white font-semibold text-base md:text-lg rounded-full shadow-xl bg-gradient-to-r from-yellow-400 to-orange-500 hover:opacity-90 transition w-full max-w-xs mx-auto">
                     <div></div>
                     もっと見る
@@ -446,7 +446,7 @@
                         <div class="grid md:grid-cols-2 gap-8 items-center">
                             <!-- Image -->
                             <div class="flex justify-center md:justify-start">
-                                <img src="./assets/img/slide1.png" alt="Customer" class="shadow-md w-full max-w-md">
+                                <img src="./assets/img/slide1.png" alt="お客様の声" class="shadow-md w-full max-w-md">
                             </div>
 
                             <!-- Text -->
@@ -470,7 +470,7 @@
                         <div class="grid md:grid-cols-2 gap-8 items-center">
                             <!-- Image -->
                             <div class="flex justify-center md:justify-start">
-                                <img src="./assets/img/slide1.png" alt="Customer" class="shadow-md w-full max-w-md">
+                                <img src="./assets/img/slide1.png" alt="お客様の声" class="shadow-md w-full max-w-md">
                             </div>
 
                             <!-- Text -->
@@ -494,7 +494,7 @@
                         <div class="grid md:grid-cols-2 gap-8 items-center">
                             <!-- Image -->
                             <div class="flex justify-center md:justify-start">
-                                <img src="./assets/img/slide1.png" alt="Customer" class="shadow-md w-full max-w-md">
+                                <img src="./assets/img/slide1.png" alt="お客様の声" class="shadow-md w-full max-w-md">
                             </div>
 
                             <!-- Text -->
@@ -518,7 +518,7 @@
                         <div class="grid md:grid-cols-2 gap-8 items-center">
                             <!-- Image -->
                             <div class="flex justify-center md:justify-start">
-                                <img src="./assets/img/slide1.png" alt="Customer" class="shadow-md w-full max-w-md">
+                                <img src="./assets/img/slide1.png" alt="お客様の声" class="shadow-md w-full max-w-md">
                             </div>
 
                             <!-- Text -->
@@ -695,15 +695,15 @@
                     class="relative z-10 w-full max-w-7xl px-6 py-10 flex flex-col sm:flex-row sm:items-center sm:justify-between">
                     <!-- Left logo -->
                     <div class="flex items-center gap-2">
-                        <img src="./assets/img/logo.png" alt="Logo" class="h-16">
+                        <img src="./assets/img/logo.png" alt="リファラルリクルーティング" class="h-16">
                     </div>
                     <!-- Menu -->
                     <nav class="mt-6 sm:mt-0 flex flex-wrap gap-6 text-sm">
-                        <a href="#" class="hover:text-orange-400">TOP</a>
-                        <a href="#" class="hover:text-orange-400">事例紹介</a>
-                        <a href="#" class="hover:text-orange-400">サービス紹介</a>
-                        <a href="#semina" class="hover:text-orange-400">セミナー</a>
-                        <a href="#" class="hover:text-orange-400">会社概要</a>
+                        <a href="./index.html" class="hover:text-orange-400">TOP</a>
+                        <a href="./case.html" class="hover:text-orange-400">事例紹介</a>
+                        <a href="./service.html" class="hover:text-orange-400">サービス紹介</a>
+                        <a href="./index.html#semina" class="hover:text-orange-400">セミナー</a>
+                        <a href="./company.html" class="hover:text-orange-400">会社概要</a>
                     </nav>
                 </div>
                 <!-- Bottom footer -->
@@ -719,14 +719,14 @@
         <div class="md:hidden bg-[#4A4A4A] text-white px-6 py-8">
             <!-- Logo and Company Name -->
             <div class="flex items-center gap-3 mb-8">
-                <img src="./assets/img/logo.png" alt="Logo" class="h-16">
+                <img src="./assets/img/logo.png" alt="リファラルリクルーティング" class="h-16">
             </div>
 
             <!-- Menu Items -->
             <nav class="mb-8">
                 <ul class="space-y-0">
                     <li class="border-b border-white border-opacity-20">
-                        <a href="#" class="flex items-center justify-between py-4 text-white hover:text-orange-400">
+                        <a href="./index.html" class="flex items-center justify-between py-4 text-white hover:text-orange-400">
                             <span>TOP</span>
                             <svg class="w-3 h-3 text-black" fill="white" viewBox="0 0 24 24">
                                 <path d="M8 5v14l11-7z" />
@@ -734,7 +734,7 @@
                         </a>
                     </li>
                     <li class="border-b border-white border-opacity-20">
-                        <a href="#" class="flex items-center justify-between py-4 text-white hover:text-orange-400">
+                        <a href="./service.html" class="flex items-center justify-between py-4 text-white hover:text-orange-400">
                             <span>サービス紹介</span>
                             <svg class="w-3 h-3 text-black" fill="white" viewBox="0 0 24 24">
                                 <path d="M8 5v14l11-7z" />
@@ -742,7 +742,7 @@
                         </a>
                     </li>
                     <li class="border-b border-white border-opacity-20">
-                        <a href="#" class="flex items-center justify-between py-4 text-white hover:text-orange-400">
+                        <a href="./case.html" class="flex items-center justify-between py-4 text-white hover:text-orange-400">
                             <span>事例紹介</span>
                             <svg class="w-3 h-3 text-black" fill="white" viewBox="0 0 24 24">
                                 <path d="M8 5v14l11-7z" />
@@ -750,7 +750,7 @@
                         </a>
                     </li>
                     <li class="border-b border-white border-opacity-20">
-                        <a href="#" class="flex items-center justify-between py-4 text-white hover:text-orange-400">
+                        <a href="./index.html#semina" class="flex items-center justify-between py-4 text-white hover:text-orange-400">
                             <span>セミナー</span>
                             <svg class="w-3 h-3 text-black" fill="white" viewBox="0 0 24 24">
                                 <path d="M8 5v14l11-7z" />
@@ -758,7 +758,7 @@
                         </a>
                     </li>
                     <li class="border-b border-white border-opacity-20">
-                        <a href="#" class="flex items-center justify-between py-4 text-white hover:text-orange-400">
+                        <a href="./company.html" class="flex items-center justify-between py-4 text-white hover:text-orange-400">
                             <span>会社概要</span>
                             <svg class="w-3 h-3 text-black" fill="white" viewBox="0 0 24 24">
                                 <path d="M8 5v14l11-7z" />
