--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     <a href="./index.html" class="hover:underline font-medium">TOP</a>
                     <a href="./case.html" class="hover:underline">事例紹介</a>
                     <a href="./service.html" class="hover:underline">サービス紹介</a>
-                    <a href="./index.html#semina" class="hover:underline">セミナー</a>
+                    <a href="./company.html#semina" class="hover:underline">セミナー</a>
                     <a href="./company.html" class="hover:underline">会社概要</a>
                 </nav>
                 <div class="flex gap-4 text-center">
@@ -97,7 +97,7 @@
                         <a href="./service.html" class="block py-4 text-lg font-medium hover:text-orange-500">サービス紹介</a>
                     </li>
                     <li class="border-b border-gray-200">
-                        <a href="./index.html#semina" class="block py-4 text-lg font-medium hover:text-orange-500">セミナー</a>
+                        <a href="./company.html#semina" class="block py-4 text-lg font-medium hover:text-orange-500">セミナー</a>
                     </li>
                     <li class="border-b border-gray-200">
                         <a href="./company.html" class="block py-4 text-lg font-medium hover:text-orange-500">会社概要</a>
@@ -702,7 +702,7 @@
                         <a href="./index.html" class="hover:text-orange-400">TOP</a>
                         <a href="./case.html" class="hover:text-orange-400">事例紹介</a>
                         <a href="./service.html" class="hover:text-orange-400">サービス紹介</a>
-                        <a href="./index.html#semina" class="hover:text-orange-400">セミナー</a>
+                        <a href="./company.html#semina" class="hover:text-orange-400">セミナー</a>
                         <a href="./company.html" class="hover:text-orange-400">会社概要</a>
                     </nav>
                 </div>
@@ -750,7 +750,7 @@
                         </a>
                     </li>
                     <li class="border-b border-white border-opacity-20">
-                        <a href="./index.html#semina" class="flex items-center justify-between py-4 text-white hover:text-orange-400">
+                        <a href="./company.html#semina" class="flex items-center justify-between py-4 text-white hover:text-orange-400">
                             <span>セミナー</span>
                             <svg class="w-3 h-3 text-black" fill="white" viewBox="0 0 24 24">
                                 <path d="M8 5v14l11-7z" />
