--- a/company.html
+++ b/company.html
@@ -20,7 +20,7 @@
 
 <body class="font-[Noto Sans JP]">
     <header class="bg-[#6B4A34] text-white fixed top-0 left-0 w-full z-50 shadow-lg">
-        <div class="max-w-9xl mx-auto flex flex-col items-center justify-between px-14 py-4">
+        <div class="max-w-9xl mx-auto flex flex-col items-center justify-between px-4 md:px-14 py-4">
             <div class="flex flex-row items-center w-full justify-between">
                 <!-- Logo and company link -->
                 <a href="./index.html" class="flex items-center space-x-4">
