--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <body class="font-[Noto Sans JP]">
     <header class="bg-[#6B4A34] text-white fixed top-0 left-0 w-full z-50 shadow-lg">
-        <div class="max-w-9xl mx-auto flex flex-col items-center justify-between px-14 py-4">
+        <div class="max-w-9xl mx-auto flex flex-col items-center justify-between px-4 md:px-14 py-4">
             <div class="flex flex-row items-center w-full justify-between">
                 <!-- Logo and company link -->
                 <a href="./index.html" class="flex items-center space-x-4">
@@ -124,9 +124,9 @@
             </div>
         </div>
     </div>
-    <main class="mt-32">
-        <section class="bg-[url('./assets/img/fv2.png')] bg-cover bg-center w-full h-[800px] relative">
-            <div class="bg-[url('./assets/img/fv1.png')] bg-cover bg-center absolute -right-28 w-[75%] h-[80%]">
+    <main class="mt-20 md:mt-32">
+        <section class="bg-[url('./assets/img/fv2.png')] bg-cover bg-center w-full h-[500px] md:h-[800px] relative">
+            <div class="bg-[url('./assets/img/fv1.png')] bg-cover bg-center absolute -left-28 md:left-auto right-0 md:-right-28 w-[120%] md:w-[75%] h-[60%] md:h-[80%]">
             </div>
             <!-- Content -->
             <div class="absolute top-1/4 left-0 transform space-y-6 w-full z-10">
@@ -147,7 +147,7 @@
             </div>
         </section>
 
-        <section class="bg-white py-16 pt-36 px-4 md:px-16 relative">
+        <section class="bg-white pb-10 md:pb-16 pt-10 md:pt-36 px-4 md:px-16 relative">
             <!-- Large Background Text -->
             <div class="absolute top-0 left-0 w-full text-[#F4B635] opacity-10 text-7xl sm:text-9xl lg:text-[240px] font-bold leading-none pointer-events-none select-none"
                 style="font-family: 'Josefin Sans', sans-serif;">
@@ -157,7 +157,7 @@
             <div class="relative z-10 max-w-6xl mx-auto text-center">
                 <!-- Small Title -->
                 <div class="pl-2 sm:pl-16 pt-2">
-                    <div class="h-1 w-8 md:w-16 bg-orange-500 mb-1"></div>
+                    <div class="h-0.5 w-8 md:w-16 bg-orange-500 mb-1"></div>
                     <h2 class="text-orange-500 font-bold text-xl md:text-3xl text-left tracking-tight">MISSON</h2>
                 </div>
                 <!-- Main Title -->
@@ -212,7 +212,7 @@
                 <div class="relative z-10">
                     <!-- Small Title -->
                     <div class="px-12 md:px-56 pt-2">
-                        <div class="h-1 w-8 md:w-16 bg-orange-500 mb-1"></div>
+                        <div class="h-0.5 w-8 md:w-16 bg-orange-500 mb-1"></div>
                         <h2 class="text-orange-500 font-bold text-xl md:text-3xl text-left tracking-tight">ABOUT</h2>
                     </div>
                     <h3 class="text-gray-900 text-xl md:text-3xl font-semibold mb-4 md:mb-20 leading-normal md:leading-[4.25rem]"
@@ -311,7 +311,7 @@
 
 
         <!-- CONCEPT Section -->
-        <section class="relative pb-16 pt-32 px-4">
+        <section class="relative pb-16 pt-10 md:pt-32 px-4">
             <!-- Large Background Text -->
             <div class="absolute top-0 left-0 w-full text-[#F4B635] opacity-10 text-7xl sm:text-9xl lg:text-[240px] font-bold leading-none pointer-events-none select-none"
                 style="font-family: 'Josefin Sans', sans-serif;">
@@ -330,7 +330,7 @@
                 <div>
                     <!-- Small Title -->
                     <div class="px-4 md:px-10 pt-2">
-                        <div class="h-1 w-8 md:w-16 bg-orange-500 mb-1"></div>
+                        <div class="h-0.5 w-8 md:w-16 bg-orange-500 mb-1"></div>
                         <h2 class="text-orange-500 font-bold text-xl md:text-3xl text-left tracking-tight">CONCEPT</h2>
                         <h2 class="text-xl md:text-3xl font-bold mt-2 mb-8">説明テキストが入ります</h2>
                         <p class="text-gray-600 mt-4 leading-relaxed">
@@ -347,9 +347,9 @@
         </section>
 
         <!-- SEMINAR Section -->
-        <section class="relative pb-16 pt-32 px-4 bg-white" id="semina">
+        <section class="relative pb-10 md:pb-16 pt-10 md:pt-36 px-4 md:px-16 bg-white" id="semina">
             <!-- Large Background Text -->
-            <div class="absolute top-0 left-0 text-right w-full text-[#78766F] opacity-10 text-7xl sm:text-9xl lg:text-[240px] font-bold leading-none pointer-events-none select-none"
+            <div class="absolute top-0 left-0 text-center md:text-right w-full text-[#78766F] opacity-10 text-7xl sm:text-9xl lg:text-[240px] font-bold leading-none pointer-events-none select-none"
                 style="font-family: 'Josefin Sans', sans-serif;">
                 SEMINAR
             </div>
@@ -429,7 +429,7 @@
 
         </section>
 
-        <section class="bg-white pb-16 pt-32 relative">
+        <section class="bg-white pb-10 md:pb-16 pt-10 md:pt-36 px-4 md:px-16 relative">
             <!-- Large Background Text -->
             <div class="absolute top-0 left-0 w-full text-[#F4B635] opacity-10 text-7xl sm:text-9xl lg:text-[240px] font-bold leading-none pointer-events-none select-none"
                 style="font-family: 'Josefin Sans', sans-serif;">
@@ -439,8 +439,8 @@
             <!-- Heading -->
             <div class="relative mb-10 z-10 text-center justify-center ">
                 <div class=" mx-auto px-4 md:px-10 pr-24 md:pr-28 pt-2 items-center flex flex-col">
-                    <div class="h-1 w-16 bg-orange-500 mb-2 mr-6"></div>
-                    <h2 class="text-orange-500 font-bold text-md md:text-3xl text-left tracking-tight">VOICE</h2>
+                    <div class="h-0.5 w-8 md:w-10 bg-orange-500 mb-2 mr-6"></div>
+                    <h2 class="text-orange-500 font-bold text-xl md:text-3xl text-left tracking-tight">VOICE</h2>
                 </div>
                 <h2 class="text-xl md:text-3xl font-bold mt-2">お客様の声</h2>
             </div>
@@ -457,7 +457,7 @@
                             </div>
 
                             <!-- Text -->
-                            <div class="text-left mr-40 -ml-40">
+                            <div class="text-left">
                                 <h3 class="text-lg font-bold mb-2">
                                     タイトルが入ります。タイトルが入ります。タイトルが入ります。タイトルが入ります。タイトルが入ります。
                                 </h3>
@@ -481,7 +481,7 @@
                             </div>
 
                             <!-- Text -->
-                            <div class="text-left mr-40 -ml-40">
+                            <div class="text-left">
                                 <h3 class="text-lg font-bold mb-2">
                                     タイトルが入ります。タイトルが入ります。タイトルが入ります。タイトルが入ります。タイトルが入ります。
                                 </h3>
@@ -505,7 +505,7 @@
                             </div>
 
                             <!-- Text -->
-                            <div class="text-left mr-40 -ml-40">
+                            <div class="text-left">
                                 <h3 class="text-lg font-bold mb-2">
                                     タイトルが入ります。タイトルが入ります。タイトルが入ります。タイトルが入ります。タイトルが入ります。
                                 </h3>
@@ -529,7 +529,7 @@
                             </div>
 
                             <!-- Text -->
-                            <div class="text-left mr-40 -ml-40">
+                            <div class="text-left">
                                 <h3 class="text-lg font-bold mb-2">
                                     タイトルが入ります。タイトルが入ります。タイトルが入ります。タイトルが入ります。タイトルが入ります。
                                 </h3>
@@ -547,7 +547,7 @@
             </div>
         </section>
 
-        <section class="bg-[#F8F7F1] pb-16 pt-32 relative">
+        <section class="bg-[#F8F7F1] pb-10 md:pb-16 pt-10 md:pt-36 px-4 md:px-16 relative">
             <div class="max-w-6xl mx-auto px-4">
                 <!-- Large Background Text -->
                 <div class="absolute text-right top-0 left-0 w-full text-[#78766F] opacity-10 text-7xl sm:text-9xl lg:text-[240px] font-bold leading-none pointer-events-none select-none"
@@ -558,8 +558,8 @@
                 <!-- Heading -->
                 <div class="relative mb-10 z-10 text-center justify-center ">
                     <div class=" mx-auto px-4 md:px-10 pt-2 items-center flex flex-col">
-                        <div class="h-1 w-16 bg-orange-500 mb-2 mr-8"></div>
-                        <h2 class="text-orange-500 font-bold text-md md:text-3xl text-left tracking-tight">NOTICE</h2>
+                        <div class="h-0.5 w-8 md:w-10 bg-orange-500 mb-2 mr-8"></div>
+                        <h2 class="text-orange-500 font-bold text-xl md:text-3xl text-left tracking-tight">NOTICE</h2>
                     </div>
                     <h2 class="text-xl md:text-3xl font-bold mt-2">お知らせ</h2>
                 </div>
@@ -569,7 +569,7 @@
                     <!-- First item -->
                     <div class="flex items-center gap-4 py-4 border-b border-gray-200">
                         <!-- Thumbnail -->
-                        <div class="w-60 h-40 bg-gray-200 flex-shrink-0"></div>
+                        <div class="w-24 md:w-60 h-auto py-10 md:h-40 bg-gray-200 flex-shrink-0"></div>
                         <!-- Content -->
                         <div class="flex-1">
                             <div class="flex gap-4">
@@ -592,7 +592,7 @@
                     <!-- Second item -->
                     <div class="flex items-center gap-4 py-4 border-b border-gray-200">
                         <!-- Thumbnail -->
-                        <div class="w-60 h-40 bg-gray-200 flex-shrink-0"></div>
+                        <div class="w-24 md:w-60 h-auto py-10 md:h-40 bg-gray-200 flex-shrink-0"></div>
                         <!-- Content -->
                         <div class="flex-1">
                             <div class="flex gap-4">
@@ -615,7 +615,7 @@
                     <!-- Third item -->
                     <div class="flex items-center gap-4 py-4 border-b border-gray-200">
                         <!-- Thumbnail -->
-                        <div class="w-60 h-40 bg-gray-200 flex-shrink-0"></div>
+                        <div class="w-24 md:w-60 h-auto py-10 md:h-40 bg-gray-200 flex-shrink-0"></div>
                         <!-- Content -->
                         <div class="flex-1">
                             <div class="flex gap-4">
@@ -635,6 +635,7 @@
                         </div>
                     </div>
 
+
                 </div>
             </div>
         </section>
@@ -651,7 +652,7 @@
             <div class="relative mb-10 z-10 text-center justify-center ">
                 <div class=" mx-auto px-4 md:px-10 pt-2 items-center flex flex-col">
                     <div class="h-1 w-16 bg-orange-500 mb-2"></div>
-                    <h2 class="text-orange-500 font-bold text-md md:text-3xl text-left tracking-tight">CONTACT</h2>
+                    <h2 class="text-orange-500 font-bold text-xl md:text-3xl text-left tracking-tight">CONTACT</h2>
                 </div>
                 <h2 class="text-white text-xl md:text-3xl font-bold mt-2">お問い合わせ</h2>
             </div>
