google map update

--- a/company.html
+++ b/company.html
@@ -287,7 +287,7 @@
                     <div class="space-y-2">
                         <iframe
                             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1620.2156884944393!2d139.77845657357125!3d35.69100080631687!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188eacb3fd9a9f%3A0xe2a4085850bb45ab!2sNihonbashikodenmacho%2C%20Chuo%20City%2C%20Tokyo%20103-0001!5e0!3m2!1sen!2sjp!4v1755199346996!5m2!1sen!2sjp"
-                            class="w-[300px] h-[300px] md:w-[400px] md:h-[400px]" style="border:0;" allowfullscreen=""
+                            class="w-full md:w-[300px] h-[300px] md:w-[400px] md:h-[400px]" style="border:0;" allowfullscreen=""
                             loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                         <!-- <img src="tokyo-map.jpg" alt="東京本社マップ" class="w-full rounded border border-gray-300"> -->
                         <div class="flex justify-between items-center">
@@ -301,7 +301,7 @@
                     <div class="space-y-2">
                         <iframe
                             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1640.3523717670337!2d135.50398639839474!3d34.68740060000002!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6000e70038e430b3%3A0xa408516c30ac34cf!2z55m95r2f57eP5ZCI56CU56m25omA!5e0!3m2!1sen!2sjp!4v1755200158158!5m2!1sen!2sjp"
-                            class="w-[300px] h-[300px] md:w-[400px] md:h-[400px]" style="border:0;" allowfullscreen=""
+                            class="w-full md:w-[300px] h-[300px] md:w-[400px] md:h-[400px]" style="border:0;" allowfullscreen=""
                             loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                         <div class="flex justify-between items-center">
                             <span class="font-bold text-gray-700">■大阪支社</span>
