top page update

--- a/index.html
+++ b/index.html
@@ -131,11 +131,11 @@
             <!-- Content -->
             <div class="absolute top-1/4 left-0 transform space-y-6 w-full z-10">
                 <div
-                    class="bg-white bg-opacity-100 px-8 md:pl-[26rem] md:pr-8 py-6 text-4xl md:text-5xl font-bold leading-snug w-fit shadow-lg">
+                    class="bg-white bg-opacity-100 px-8 md:pl-[26rem] md:pr-8 py-4 md:py-6 text-4xl md:text-5xl font-bold leading-snug w-fit shadow-lg">
                     最高の <span class="text-orange-500">仲間</span> と
                 </div>
                 <div
-                    class="bg-white bg-opacity-100 px-8 md:pl-[26rem] md:pr-8 py-6 text-4xl md:text-5xl font-bold leading-snug w-fit shadow-lg">
+                    class="bg-white bg-opacity-100 px-8 pr-0 md:pl-[26rem] md:pr-8 py-4 md:py-6 text-4xl md:text-5xl font-bold leading-snug w-fit shadow-lg">
                     最高の <span class="text-orange-500">仕事</span> を。
                 </div>
             </div>
@@ -149,7 +149,7 @@
 
         <section class="bg-white pb-10 md:pb-16 pt-10 md:pt-36 px-4 md:px-16 relative">
             <!-- Large Background Text -->
-            <div class="absolute top-0 left-0 w-full text-[#F4B635] opacity-10 text-7xl sm:text-9xl lg:text-[240px] font-bold leading-none pointer-events-none select-none"
+            <div class="tracking-widest absolute top-0 left-0 w-full text-[#F4B635] opacity-10 text-7xl sm:text-9xl lg:text-[240px] font-bold leading-none pointer-events-none select-none"
                 style="font-family: 'Josefin Sans', sans-serif;">
                 MISSION
             </div>
@@ -157,7 +157,7 @@
             <div class="relative z-10 max-w-6xl mx-auto text-center">
                 <!-- Small Title -->
                 <div class="pl-2 sm:pl-16 pt-2">
-                    <div class="h-0.5 w-8 md:w-16 bg-orange-500 mb-1"></div>
+                    <div class="h-0.5 w-8 md:w-10 bg-orange-500 mb-1"></div>
                     <h2 class="text-orange-500 font-bold text-xl md:text-3xl text-left tracking-tight">MISSON</h2>
                 </div>
                 <!-- Main Title -->
@@ -203,7 +203,7 @@
         <!-- ABOUT Section -->
         <section class="bg-[#F8F7F1] py-16 relative">
             <!-- Large Background Text -->
-            <div class="absolute top-0 text-right right-0 w-full text-[#78766F] opacity-10 text-7xl sm:text-9xl lg:text-[240px] font-bold leading-none pointer-events-none select-none"
+            <div class="tracking-widest absolute top-0 text-right right-0 w-full text-[#78766F] opacity-10 text-7xl sm:text-9xl lg:text-[240px] font-bold leading-none pointer-events-none select-none"
                 style="font-family: 'Josefin Sans', sans-serif;">
                 ABOUT
             </div>
@@ -212,7 +212,7 @@
                 <div class="relative z-10">
                     <!-- Small Title -->
                     <div class="px-12 md:px-56 pt-2">
-                        <div class="h-0.5 w-8 md:w-16 bg-orange-500 mb-1"></div>
+                        <div class="h-0.5 w-8 md:w-10 bg-orange-500 mb-1"></div>
                         <h2 class="text-orange-500 font-bold text-xl md:text-3xl text-left tracking-tight">ABOUT</h2>
                     </div>
                     <h3 class="text-gray-900 text-xl md:text-3xl font-semibold mb-4 md:mb-20 leading-normal md:leading-[4.25rem]"
@@ -236,7 +236,7 @@
                         <p class="text-8xl font-bold text-green-700 leading-none font-[Oswald]">01</p>
                     </div>
                     <div class="max-w-md">
-                        <h3 class="text-right md:text-left text-xl md:text-2xl font-bold mt-4">最高の仲間を採用</h3>
+                        <h3 class="text-right md:text-left text-xl md:text-4xl font-bold mt-4 mb-8">最高の仲間を採用</h3>
                         <p class="text-gray-600 mt-4 leading-relaxed">
                             自社のことを誰よりも知っている社員が、人柄まで知っている友人・知人を紹介してくれるため、自社の文化にぴったりのまさに“最高の仲間”を採用できます。
                         </p>
@@ -261,7 +261,7 @@
                         <img src="./assets/img/about2.png" alt="チームディスカッション" class=" w-full object-cover">
                     </div>
                     <div class="max-w-md">
-                        <h3 class="text-xl md:text-2xl font-bold mt-4">採用コストを削減</h3>
+                        <h3 class="text-xl md:text-4xl font-bold mt-4 mb-8">採用コストを削減</h3>
                         <p class="text-gray-600 mt-4 leading-relaxed">
                             社員からの紹介を通して採用活動を行うため、採用媒体や紹介会社を経由しないので最低限のコストで人材を採用することができます。
                         </p>
@@ -282,7 +282,7 @@
                         <p class="text-8xl font-bold text-green-700 leading-none font-[Oswald]">03</p>
                     </div>
                     <div class="max-w-md">
-                        <h3 class="text-right xl:text-left text-xl md:text-2xl font-bold mt-4">離職率が低下</h3>
+                        <h3 class="text-right xl:text-left text-xl md:text-4xl font-bold mt-4 mb-8">離職率が低下</h3>
                         <p class="text-gray-600 mt-4 leading-relaxed">
                             自社のことを社員から直接聞けるので、入社後のミスマッチが起きにくく、離職率の低下が期待できます。
                         </p>
@@ -313,7 +313,7 @@
         <!-- CONCEPT Section -->
         <section class="relative pb-16 pt-10 md:pt-32 px-4">
             <!-- Large Background Text -->
-            <div class="absolute top-0 left-0 w-full text-[#F4B635] opacity-10 text-7xl sm:text-9xl lg:text-[240px] font-bold leading-none pointer-events-none select-none"
+            <div class="tracking-widest absolute top-0 left-0 w-full text-[#F4B635] opacity-10 text-7xl sm:text-9xl lg:text-[240px] font-bold leading-none pointer-events-none select-none"
                 style="font-family: 'Josefin Sans', sans-serif;">
                 CONCEPT
             </div>
@@ -330,7 +330,7 @@
                 <div>
                     <!-- Small Title -->
                     <div class="px-4 md:px-10 pt-2">
-                        <div class="h-0.5 w-8 md:w-16 bg-orange-500 mb-1"></div>
+                        <div class="h-0.5 w-8 md:w-10 bg-orange-500 mb-1"></div>
                         <h2 class="text-orange-500 font-bold text-xl md:text-3xl text-left tracking-tight">CONCEPT</h2>
                         <h2 class="text-xl md:text-3xl font-bold mt-2 mb-8">説明テキストが入ります</h2>
                         <p class="text-gray-600 mt-4 leading-relaxed">
@@ -349,18 +349,19 @@
         <!-- SEMINAR Section -->
         <section class="relative pb-10 md:pb-16 pt-10 md:pt-36 px-4 md:px-16 bg-white" id="semina">
             <!-- Large Background Text -->
-            <div class="absolute top-0 left-0 text-center md:text-right w-full text-[#78766F] opacity-10 text-7xl sm:text-9xl lg:text-[240px] font-bold leading-none pointer-events-none select-none"
+            <div class="tracking-widest absolute top-0 left-0 text-center md:text-right w-full text-[#78766F] opacity-10 text-7xl sm:text-9xl lg:text-[240px] font-bold leading-none pointer-events-none select-none"
                 style="font-family: 'Josefin Sans', sans-serif;">
                 SEMINAR
             </div>
 
-            <!-- Heading -->
-            <div class="relative z-10 text-center justify-center w-full ">
-                <div class=" mx-auto px-4 md:px-10 pt-2 items-center flex flex-col">
-                    <div class="h-1 w-8 md:w-16 bg-orange-500 mb-1"></div>
+            <div class="mx-auto max-w-md sm:max-w-xs px-20 sm:px-6 lg:px-8 relative z-10">
+                <div class="pl-2 sm:pl-12 pt-0 md:pt-20 mb-6">
+                    <div class="h-0.5 w-8 md:w-10 bg-orange-500 mb-1"></div>
                     <h2 class="text-orange-500 font-bold text-xl md:text-3xl text-left tracking-tight">SEMINAR</h2>
                 </div>
-                <h2 class="text-xl md:text-3xl font-bold mt-2">セミナー情報</h2>
+                <p class="font-bold text-xl md:text-3xl pl-2 sm:pl-12 leading-normal md:leading-[3rem] mb-6 md:mb-24">
+                    セミナー情報
+                </p>
             </div>
 
             <div class="wrapper_semina">
@@ -368,9 +369,9 @@
                 <div class="carousel_semina">
 
                     <!-- Card -->
-                    <div class="bg-white shadow-md relative">
+                    <div class="bg-white w-auto shadow-md relative">
                         <img src="./assets/img/semina.png" alt="セミナー" class="w-60 h-60 object-cover">
-                        <div class="absolute -left-4 bottom-4 py-5 px-4 bg-white border-2 border-orange-300">
+                        <div class="absolute text-left -left-4 bottom-4 py-1 md:py-5 px-2 md:px-4 bg-white border-2 border-orange-300">
                             <p class="text-xs text-orange-500 font-bold">2025.07.01</p>
                             <h3 class="text-sm font-bold mt-1">セミナータイトル</h3>
                         </div>
@@ -379,7 +380,7 @@
                     <!-- Card -->
                     <div class="bg-white shadow-md relative">
                         <img src="./assets/img/semina.png" alt="セミナー" class="w-60 h-60 object-cover">
-                        <div class="absolute -left-4 bottom-4 py-5 px-4 bg-white border-2 border-orange-300">
+                        <div class="absolute text-left -left-4 bottom-4 py-1 md:py-5 px-2 md:px-4 bg-white border-2 border-orange-300">
                             <p class="text-xs text-orange-500 font-bold">2025.07.01</p>
                             <h3 class="text-sm font-bold mt-1">セミナータイトル</h3>
                         </div>
@@ -388,7 +389,7 @@
                     <!-- Card -->
                     <div class="bg-white shadow-md relative">
                         <img src="./assets/img/semina.png" alt="セミナー" class="w-60 h-60 object-cover">
-                        <div class="absolute -left-4 bottom-4 py-5 px-4 bg-white border-2 border-orange-300">
+                        <div class="absolute text-left -left-4 bottom-4 py-1 md:py-5 px-2 md:px-4 bg-white border-2 border-orange-300">
                             <p class="text-xs text-orange-500 font-bold">2025.07.01</p>
                             <h3 class="text-sm font-bold mt-1">セミナータイトル</h3>
                         </div>
@@ -397,7 +398,7 @@
                     <!-- Card -->
                     <div class="bg-white shadow-md relative">
                         <img src="./assets/img/semina.png" alt="セミナー" class="w-60 h-60 object-cover">
-                        <div class="absolute -left-4 bottom-4 py-5 px-4 bg-white border-2 border-orange-300">
+                        <div class="absolute text-left -left-4 bottom-4 py-1 md:py-5 px-2 md:px-4 bg-white border-2 border-orange-300">
                             <p class="text-xs text-orange-500 font-bold">2025.07.01</p>
                             <h3 class="text-sm font-bold mt-1">セミナータイトル</h3>
                         </div>
@@ -406,7 +407,7 @@
                     <!-- Card -->
                     <div class="bg-white shadow-md relative">
                         <img src="./assets/img/semina.png" alt="セミナー" class="w-60 h-60 object-cover">
-                        <div class="absolute -left-4 bottom-4 py-5 px-4 bg-white border-2 border-orange-300">
+                        <div class="absolute text-left -left-4 bottom-4 py-1 md:py-5 px-2 md:px-4 bg-white border-2 border-orange-300">
                             <p class="text-xs text-orange-500 font-bold">2025.07.01</p>
                             <h3 class="text-sm font-bold mt-1">セミナータイトル</h3>
                         </div>
@@ -431,7 +432,7 @@
 
         <section class="bg-white pb-10 md:pb-16 pt-10 md:pt-36 px-4 md:px-16 relative">
             <!-- Large Background Text -->
-            <div class="absolute top-0 left-0 w-full text-[#F4B635] opacity-10 text-7xl sm:text-9xl lg:text-[240px] font-bold leading-none pointer-events-none select-none"
+            <div class="tracking-widest absolute top-0 left-0 w-full text-[#F4B635] opacity-10 text-7xl sm:text-9xl lg:text-[240px] font-bold leading-none pointer-events-none select-none"
                 style="font-family: 'Josefin Sans', sans-serif;">
                 VOICE
             </div>
@@ -550,7 +551,7 @@
         <section class="bg-[#F8F7F1] pb-10 md:pb-16 pt-10 md:pt-36 px-4 md:px-16 relative">
             <div class="max-w-6xl mx-auto px-4">
                 <!-- Large Background Text -->
-                <div class="absolute text-right top-0 left-0 w-full text-[#78766F] opacity-10 text-7xl sm:text-9xl lg:text-[240px] font-bold leading-none pointer-events-none select-none"
+                <div class="tracking-widest absolute text-right top-0 left-0 w-full text-[#78766F] opacity-10 text-7xl sm:text-9xl lg:text-[240px] font-bold leading-none pointer-events-none select-none"
                     style="font-family: 'Josefin Sans', sans-serif;">
                     NOTICE
                 </div>
@@ -643,25 +644,25 @@
         <section
             class="relative w-full pt-32 pb-16 px-6 bg-gradient-to-b from-[#373D54] to-[#07154A] text-center">
             <!-- Large Background Text -->
-            <div class="absolute top-0 left-0 text-left w-full text-[#78766F] opacity-10 text-7xl sm:text-9xl lg:text-[240px] font-bold leading-none pointer-events-none select-none"
+            <div class="tracking-widest absolute top-0 left-0 text-left w-full text-[#78766F] opacity-10 text-7xl sm:text-9xl lg:text-[240px] font-bold leading-none pointer-events-none select-none"
                 style="font-family: 'Josefin Sans', sans-serif;">
                 CONTACT
             </div>
 
-            <!-- Heading -->
-            <div class="relative mb-10 z-10 text-center justify-center ">
-                <div class=" mx-auto px-4 md:px-10 pt-2 items-center flex flex-col">
-                    <div class="h-1 w-16 bg-orange-500 mb-2"></div>
+            <!-- Small Title -->
+            <div class="mx-auto max-w-xs px-4 sm:px-6 lg:px-8 relative z-10">
+                <div class="pl-20 sm:pl-12 pt-20 mb-6">
+                    <div class="h-0.5 w-8 md:w-10 bg-orange-500 mb-1"></div>
                     <h2 class="text-orange-500 font-bold text-xl md:text-3xl text-left tracking-tight">CONTACT</h2>
                 </div>
-                <h2 class="text-white text-xl md:text-3xl font-bold mt-2">お問い合わせ</h2>
+                <p class="text-white font-bold text-xl md:text-3xl pl-0 sm:pl-12 leading-normal md:leading-[3rem] mb-6 md:mb-24 font-bold">
+                    お問い合わせ
+                </p>
             </div>
-
-
             <!-- Content container -->
             <div class="relative z-10 max-w-3xl mx-auto">
 
-                <p class="text-white text-md md:text-xl">おまずは課題に感じている点をお聞かせください！！</p>
+                <p class="text-white px-10 text-md md:text-xl">おまずは課題に感じている点をお聞かせください！！</p>
 
                 <!-- Buttons -->
                 <div class="mt-8 flex flex-col sm:flex-row gap-0 sm:gap-4 justify-center items-center">
